fixed:   app.py fixed:   services/file_service.py fixed:   static/css/main.css fixed:   templates/index.html fixed:   utils/helpers.py - fixed too much conservation in Session when sending numbers - The display of the list of numbers corrected - added JSON processing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,6 +17,7 @@
 
 .scrollable-list {
     flex-grow: 1;
+    max-height: 500px;
     overflow-y: auto;
 }
 
